Release 4.5.0